--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ experiments/trained_models/transformer/tokenizers/special_tokens_map.json
 experiments/trained_models/transformer/tokenizers/tokenizer_config.json
 experiments/trained_models/transformer/tokenizers/vocab.json
 experiments/trained_models/transformer/training_args.bin
+experiments/trained_models/sparse_model/training_args.bin
+scripts/__pycache__/layer_switching_gpt2.cpython-37.pyc
